# ntient

./: .gitignore  README.md  build_package.sh  setup.cfg  setup.py
aws/: Dockerfile  buildspec.yml
ntient/: __init__.py  base.py  model.py
tests/: conftest.py  keras_model.h5  pytorch_model.pt  sklearn_model.joblib  test_api.py  test_model.py  test_packager.py
tests/support/: test_generated_format.json  test_input_format.json  test_output_format.json
