[metadata]
name = ntient
version = 0.1
author = Joel Davenport
author_email = joel.davenport@ntient.ai
description = Python Package for using the ntient.api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntient/ntient
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ntient
packages = find:
python_requires = >=3.6

[aliases]
test=pytest